Test: getFirst